# coldstar-dapp-consensus-hackathon--seeker-track-

./: .gitignore  CONVERSION_SUMMARY.md  FEATURES_BACKEND_SPEC.md  MOBILE_BUILD_GUIDE.md  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  setup-mobile.sh  vite.config.ts
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/coldstar/plugins/: BiometricAuthPlugin.java  ColdstarUSBPlugin.java
android/app/src/main/java/com/coldstar/wallet/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: usb_device_filter.xml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/crates/coldstar-core/: Cargo.toml
backend/crates/coldstar-core/src/: canonical.rs  error.rs  lib.rs  sign_request.rs  sign_response.rs  tx_params.rs  wallet.rs
backend/crates/coldstar-crypto/: Cargo.toml
backend/crates/coldstar-crypto/src/: aes.rs  ed25519.rs  error.rs  kdf.rs  lib.rs  x25519.rs
backend/crates/coldstar-ffi/: Cargo.toml
backend/crates/coldstar-ffi/src/: lib.rs  state.rs
backend/crates/coldstar-rpc/: Cargo.toml
backend/crates/coldstar-rpc/src/: error.rs  flux.rs  lib.rs  rugcheck.rs  solana.rs
backend/crates/coldstar-session/: Cargo.toml
backend/crates/coldstar-session/src/: error.rs  lib.rs  manager.rs  session.rs
backend/crates/coldstar-signer/: Cargo.toml
backend/crates/coldstar-signer/src/: error.rs  lib.rs  pipeline.rs
backend/crates/coldstar-transport/: Cargo.toml
backend/crates/coldstar-transport/src/: error.rs  frame.rs  lib.rs  qr.rs  usb.rs
src/: main.tsx
src/app/: App.tsx  routes.tsx
src/app/components/auth/: PinUnlock.tsx
src/app/components/main/: AssetDetail.tsx  Explore.tsx  History.tsx  Home.tsx  RWA.tsx  Stake.tsx
src/app/components/onboarding/: BackupWallet.tsx  FirmwareFlash.tsx  PinSetup.tsx  StartupFlash.tsx  Success.tsx  USBConnect.tsx  Welcome.tsx
src/app/components/shared/: BottomNav.tsx  DebugLogViewer.tsx  HardwareAuthPrompt.tsx  HardwareStatus.tsx  NumericKeypad.tsx  PinInput.tsx  PinVerification.tsx  PullToRefresh.tsx  ShootingStars.tsx  SwipeButton.tsx  TokenIcon.tsx  WalletDrawer.tsx
src/app/components/transaction/: BulkSend.tsx  Receive.tsx  Send.tsx  Swap.tsx
src/app/components/ui/: select.tsx
src/contexts/: WalletContext.tsx
src/services/: biometric.ts  debug-log.ts  jupiter.ts  prices.ts  rugcheck.ts  solana.ts  solscan.ts  transaction-cache.ts  transactions.ts  usb-flash.ts  wallet.ts
src/styles/: fonts.css  tailwind.css  theme.css
src/utils/: mobile.ts  useStartupPage.ts
