[package]
name = "coldstar-core"
version.workspace = true
edition.workspace = true

[dependencies]
coldstar-crypto = { path = "../coldstar-crypto" }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
