[package]
name = "coldstar-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
