[package]
name = "coldstar-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
coldstar-core = { path = "../coldstar-core" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bs58 = { workspace = true }
